Add linter and formatter

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,11 @@
 # Omakase Ruby styling for Rails
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
+# ERB files contain HTML; RuboCop parses as Ruby and fails on < and >
+AllCops:
+  Exclude:
+    - "**/*.erb"
+
 # Overwrite or add rules to create your own house style
 #
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
